--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Favicon  -->
     <link
       rel="shortcut icon"
-      href="assets/images/My_full_body_pic.png"
+      href="assets/images/an-mamun.png"
       type="image/x-icon" />
     <!-- Bootstrap icons CDN -->
     <link
@@ -51,8 +51,6 @@
         </div>
       </div>
     </nav>
-
-
 
     <main>
       <!-- Hero-Section -->
@@ -430,8 +428,58 @@
           </div>
         </div>
       </section>
+      <!-- =============== Contact Section ================  -->
+      <section class="contact-section">
+        <div class="container">
+          <div class="row align-items-center justify-content-around">
+            <div class="col-md-5 d-none d-md-block">
+              <img src="assets/images/contact img.png" alt="Contact Image" />
+            </div>
+            <div class="col-md-5">
+              <h1>Contact Me</h1>
+              <form action="#">
+                <div class="d-flex gap-2 fs-5 fw-bold">
+                  <span class="d-inline">Contact Email: </span>
+                  <a
+                    class="nav-link text-danger"
+                    href="mailto:almamun20044@gmail.com"
+                    >almamun20044@gmail.com</a
+                  >
+                </div>
+                <input type="text" placeholder="Name" required />
+                <input type="email" placeholder="Email" required />
+                <textarea placeholder="Message" required></textarea>
+                <div
+                  class="toast align-items-center"
+                  role="alert"
+                  id="liveToast"
+                  aria-live="assertive"
+                  aria-atomic="false">
+                  <div class="d-flex">
+                    <div class="toast-body fw-bold">
+                      This features is not Ready yet 🙂
+                    </div>
+                    <button
+                      type="button"
+                      class="btn-close me-2 m-auto"
+                      data-bs-dismiss="toast"
+                      aria-label="Close"></button>
+                  </div>
+                </div>
+                <input
+                  id="liveToastBtn"
+                  type="button"
+                  value="Send"
+                  class="btn btn-info text-light" />
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Bootstrap JS  -->
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Custom JS  -->
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
