--- a/index.html
+++ b/index.html
@@ -476,6 +476,30 @@
           </div>
         </div>
       </section>
+      <!-- =============== Footer Section ================  -->
+      <footer class="footer-section">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-6 d-block text-center  d-md-flex align-items-center gap-2">
+              <img src="assets/images/an-mamun.png" alt="" />
+              <div>
+                <strong>AN.Mamun &copy; </strong> <br />
+                <span>almamun20044@gmail.com</span>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="socail-icon text-center text-md-end">
+                <a href="#"><i class="bi bi-facebook"></i></a>
+                <a href="#"><i class="bi bi-twitter"></i></a>
+                <a href="#"><i class="bi bi-youtube"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="#"><i class="bi bi-github"></i></a>
+                <a href="#"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
     </main>
     <!-- Bootstrap JS  -->
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
