--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top py-4">
+    <nav id="navbar" class="navbar navbar-expand-lg fixed-top py-4">
       <div class="container">
-        <a href="#"></a>
+        <a class="navbar-brand fs-2 fw-bold" href="#">AN.MAMUN</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,36 +37,60 @@
           <i class="bi bi-list"></i>
         </button>
         <div class="collapse navbar-collapse text-center" id="navbarNav">
-          <ul class="navbar-nav ms-auto shadow bg-light">
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#home"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#skills">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#service">Service</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#qualifications">Qualifications</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <main>
+    <main data-bs-spy="scroll" data-bs-smooth-scroll="true" tabindex="0">
       <!-- Hero-Section -->
-      <section class="hero-section">
+      <section id="home" class="hero-section">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-6 col-sm-12">
               <h1>HAY! I'M AN MAMUN</h1>
               <p>Expert in Web Development and Programming</p>
               <div class="socail-icon">
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-twitter"></i></a>
-                <a href="#"><i class="bi bi-youtube"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
-                <a href="#"><i class="bi bi-github"></i></a>
-                <a href="#"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://web.facebook.com/anmamun0/">
+                  <i class="bi bi-facebook"></i>
+                </a>
+                <a href="https://twitter.com/anmamun0">
+                  <i class="bi bi-twitter"></i>
+                </a>
+                <a
+                  href="https://www.youtube.com/channel/UCmunP9J4cGIJMhF2kXYSaqQ">
+                  <i class="bi bi-youtube"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/anmamun0/">
+                  <i class="bi bi-linkedin"></i>
+                </a>
+                <a href="https://github.com/anmamun0">
+                  <i class="bi bi-github"></i>
+                </a>
+                <a href="https://codeforces.com/profile/anmamun0">
+                  <i class="bi bi-link-45deg"></i>
+                </a>
               </div>
               <div class="contact-btn mt-4">
                 <a class="btn btn-primary" href="#">Contact</a>
@@ -84,7 +108,7 @@
         </div>
       </section>
       <!-- About section  -->
-      <section class="about-section">
+      <section id="about" class="about-section">
         <div class="container px-5 my-5">
           <div class="row align-items-center pt-5">
             <div class="col-md-6">
@@ -116,21 +140,21 @@
             </div>
           </div>
           <!-- Skills Info -->
-          <div class="skills-info pt-5 mt-5">
+          <div id="skills" class="skills-info pt-5 mt-5">
             <h1>Skill Set</h1>
             <div class="row align-items-center justify-content-between">
               <div class="col-md-6 px-2">
                 <div class="progressBar">
                   <strong>WEB DESIGN</strong>
                   <div
-                    class="progress bg-info"
+                    class="progress"
                     role="progressbar"
                     aria-label="Example 20px high"
                     aria-valuenow="100"
                     aria-valuemin="0"
                     aria-valuemax="100"
                     style="height: 20px">
-                    <div class="progress-bar" style="width: 100%">
+                    <div class="progress-bar bg-info" style="width: 100%">
                       <span>WORDPRESS , SHOPIFAY</span>
                       <span>100%</span>
                     </div>
@@ -146,7 +170,7 @@
                     aria-valuemin="0"
                     aria-valuemax="100"
                     style="height: 20px">
-                    <div class="progress-bar" style="width: 25%">
+                    <div class="progress-bar bg-info" style="width: 25%">
                       <span>HTML</span>
                       <span>25%</span>
                     </div>
@@ -162,7 +186,7 @@
                     aria-valuemin="0"
                     aria-valuemax="100"
                     style="height: 20px">
-                    <div class="progress-bar" style="width: 25%">
+                    <div class="progress-bar bg-info" style="width: 25%">
                       <span>HTML</span>
                       <span>25%</span>
                     </div>
@@ -178,7 +202,7 @@
                     aria-valuemin="0"
                     aria-valuemax="100"
                     style="height: 20px">
-                    <div class="progress-bar" style="width: 25%">
+                    <div class="progress-bar bg-info" style="width: 25%">
                       <span>HTML</span>
                       <span>25%</span>
                     </div>
@@ -196,7 +220,7 @@
                     aria-valuemin="0"
                     aria-valuemax="100"
                     style="height: 20px">
-                    <div class="progress-bar" style="width: 25%">
+                    <div class="progress-bar bg-info" style="width: 25%">
                       <span>HTML</span>
                       <span>25%</span>
                     </div>
@@ -212,7 +236,7 @@
                     aria-valuemin="0"
                     aria-valuemax="100"
                     style="height: 20px">
-                    <div class="progress-bar" style="width: 25%">
+                    <div class="progress-bar bg-info" style="width: 25%">
                       <span>HTML</span>
                       <span>25%</span>
                     </div>
@@ -228,7 +252,7 @@
                     aria-valuemin="0"
                     aria-valuemax="100"
                     style="height: 20px">
-                    <div class="progress-bar" style="width: 25%">
+                    <div class="progress-bar bg-info" style="width: 25%">
                       <span>HTML</span>
                       <span>25%</span>
                     </div>
@@ -244,7 +268,7 @@
                     aria-valuemin="0"
                     aria-valuemax="100"
                     style="height: 20px">
-                    <div class="progress-bar" style="width: 25%">
+                    <div class="progress-bar bg-info" style="width: 25%">
                       <span>HTML</span>
                       <span>25%</span>
                     </div>
@@ -303,7 +327,7 @@
         </div>
       </section>
       <!-- Service Section  -->
-      <section class="service-section">
+      <section id="service" class="service-section">
         <div class="container py-5">
           <h1>Awsome Service</h1>
           <div class="row">
@@ -347,7 +371,7 @@
         </div>
       </section>
       <!-- Experience Section  -->
-      <section class="experience-section py-5">
+      <section id="qualifications" class="experience-section py-5">
         <div class="container">
           <h1>Experience</h1>
           <div class="row justify-content-between">
@@ -429,7 +453,7 @@
         </div>
       </section>
       <!-- =============== Contact Section ================  -->
-      <section class="contact-section">
+      <section id="contact" class="contact-section">
         <div class="container">
           <div class="row align-items-center justify-content-around">
             <div class="col-md-5 d-none d-md-block">
@@ -480,7 +504,8 @@
       <footer class="footer-section">
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-md-6 d-block text-center  d-md-flex align-items-center gap-2">
+            <div
+              class="col-md-6 d-block text-center d-md-flex align-items-center gap-2">
               <img src="assets/images/an-mamun.png" alt="" />
               <div>
                 <strong>AN.Mamun &copy; </strong> <br />
@@ -489,12 +514,25 @@
             </div>
             <div class="col-md-6">
               <div class="socail-icon text-center text-md-end">
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-twitter"></i></a>
-                <a href="#"><i class="bi bi-youtube"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
-                <a href="#"><i class="bi bi-github"></i></a>
-                <a href="#"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://web.facebook.com/anmamun0/">
+                  <i class="bi bi-facebook"></i>
+                </a>
+                <a href="https://twitter.com/anmamun0">
+                  <i class="bi bi-twitter"></i>
+                </a>
+                <a
+                  href="https://www.youtube.com/channel/UCmunP9J4cGIJMhF2kXYSaqQ">
+                  <i class="bi bi-youtube"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/anmamun0/">
+                  <i class="bi bi-linkedin"></i>
+                </a>
+                <a href="https://github.com/anmamun0">
+                  <i class="bi bi-github"></i>
+                </a>
+                <a href="https://codeforces.com/profile/anmamun0">
+                  <i class="bi bi-link-45deg"></i>
+                </a>
               </div>
             </div>
           </div>
