--- a/index.html
+++ b/index.html
@@ -72,25 +72,25 @@
               <h1>HAY! I'M AN MAMUN</h1>
               <p>Expert in Web Development and Programming</p>
               <div class="socail-icon">
-                <a href="https://web.facebook.com/anmamun0/">
-                  <i class="bi bi-facebook"></i>
-                </a>
-                <a href="https://twitter.com/anmamun0">
-                  <i class="bi bi-twitter"></i>
-                </a>
+                <a href="https://web.facebook.com/anmamun0/"
+                  ><i class="bi bi-facebook"></i
+                ></a>
+                <a href="https://twitter.com/anmamun0"
+                  ><i class="bi bi-twitter"></i
+                ></a>
                 <a
-                  href="https://www.youtube.com/channel/UCmunP9J4cGIJMhF2kXYSaqQ">
-                  <i class="bi bi-youtube"></i>
-                </a>
-                <a href="https://www.linkedin.com/in/anmamun0/">
-                  <i class="bi bi-linkedin"></i>
-                </a>
-                <a href="https://github.com/anmamun0">
-                  <i class="bi bi-github"></i>
-                </a>
-                <a href="https://codeforces.com/profile/anmamun0">
-                  <i class="bi bi-link-45deg"></i>
-                </a>
+                  href="https://www.youtube.com/channel/UCmunP9J4cGIJMhF2kXYSaqQ"
+                  ><i class="bi bi-youtube"></i
+                ></a>
+                <a href="https://www.linkedin.com/in/anmamun0/"
+                  ><i class="bi bi-linkedin"></i
+                ></a>
+                <a href="https://github.com/anmamun0"
+                  ><i class="bi bi-github"></i
+                ></a>
+                <a href="https://codeforces.com/profile/anmamun0"
+                  ><i class="bi bi-link-45deg"></i
+                ></a>
               </div>
               <div class="contact-btn mt-4">
                 <a class="btn btn-primary" href="#">Contact</a>
@@ -514,25 +514,25 @@
             </div>
             <div class="col-md-6">
               <div class="socail-icon text-center text-md-end">
-                <a href="https://web.facebook.com/anmamun0/">
-                  <i class="bi bi-facebook"></i>
-                </a>
-                <a href="https://twitter.com/anmamun0">
-                  <i class="bi bi-twitter"></i>
-                </a>
+                <a href="https://web.facebook.com/anmamun0/"
+                  ><i class="bi bi-facebook"></i
+                ></a>
+                <a href="https://twitter.com/anmamun0"
+                  ><i class="bi bi-twitter"></i
+                ></a>
                 <a
-                  href="https://www.youtube.com/channel/UCmunP9J4cGIJMhF2kXYSaqQ">
-                  <i class="bi bi-youtube"></i>
-                </a>
-                <a href="https://www.linkedin.com/in/anmamun0/">
-                  <i class="bi bi-linkedin"></i>
-                </a>
-                <a href="https://github.com/anmamun0">
-                  <i class="bi bi-github"></i>
-                </a>
-                <a href="https://codeforces.com/profile/anmamun0">
-                  <i class="bi bi-link-45deg"></i>
-                </a>
+                  href="https://www.youtube.com/channel/UCmunP9J4cGIJMhF2kXYSaqQ"
+                  ><i class="bi bi-youtube"></i
+                ></a>
+                <a href="https://www.linkedin.com/in/anmamun0/"
+                  ><i class="bi bi-linkedin"></i
+                ></a>
+                <a href="https://github.com/anmamun0"
+                  ><i class="bi bi-github"></i
+                ></a>
+                <a href="https://codeforces.com/profile/anmamun0"
+                  ><i class="bi bi-link-45deg"></i
+                ></a>
               </div>
             </div>
           </div>
