--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link
       rel="shortcut icon"
       href="assets/images/an-mamun.png"
-      type="image/x-icon" />
+      type="image/x-icon"
+    />
     <!-- Bootstrap icons CDN -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
       integrity="sha384-4LISF5TTJX/fLmGSxO53rV4miRxdg84mZsxmO8Rx5jGtp/LbrixFETvWa5a6sESd"
-      crossorigin="anonymous" />
+      crossorigin="anonymous"
+    />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <title>AN.MAMUN</title>
@@ -33,7 +35,8 @@
           data-bs-target="#navbarNav"
           aria-controls="navbarNav"
           aria-expanded="false"
-          aria-label="Toggle navigation">
+          aria-label="Toggle navigation"
+        >
           <i class="bi bi-list"></i>
         </button>
         <div class="collapse navbar-collapse text-center" id="navbarNav">
@@ -153,7 +156,8 @@
                     aria-valuenow="100"
                     aria-valuemin="0"
                     aria-valuemax="100"
-                    style="height: 20px">
+                    style="height: 20px"
+                  >
                     <div class="progress-bar bg-info" style="width: 100%">
                       <span>WORDPRESS , SHOPIFAY</span>
                       <span>100%</span>
@@ -161,116 +165,123 @@
                   </div>
                 </div>
                 <div class="progressBar">
-                  <strong>HTML</strong>
+                  <strong>WEB DEVELOPMENT</strong>
                   <div
                     class="progress"
                     role="progressbar"
                     aria-label="Example 20px high"
-                    aria-valuenow="25"
+                    aria-valuenow="80"
                     aria-valuemin="0"
                     aria-valuemax="100"
-                    style="height: 20px">
-                    <div class="progress-bar bg-info" style="width: 25%">
-                      <span>HTML</span>
-                      <span>25%</span>
+                    style="height: 20px"
+                  >
+                    <div class="progress-bar bg-info" style="width: 80%">
+                      <span>HTML, CSS, JavaScript</span>
+                      <span>80%</span>
                     </div>
                   </div>
                 </div>
                 <div class="progressBar">
-                  <strong>HTML</strong>
+                  <strong>WEB DESIGN</strong>
                   <div
                     class="progress"
                     role="progressbar"
                     aria-label="Example 20px high"
-                    aria-valuenow="25"
+                    aria-valuenow="60"
                     aria-valuemin="0"
                     aria-valuemax="100"
-                    style="height: 20px">
-                    <div class="progress-bar bg-info" style="width: 25%">
-                      <span>HTML</span>
-                      <span>25%</span>
+                    style="height: 20px"
+                  >
+                    <div class="progress-bar bg-info" style="width: 60">
+                      <span>WORDPRESS , SHOPIFAY</span>
+                      <span>60%</span>
                     </div>
                   </div>
                 </div>
                 <div class="progressBar">
-                  <strong>HTML</strong>
+                  <strong>WEB DESIGN</strong>
                   <div
                     class="progress"
                     role="progressbar"
                     aria-label="Example 20px high"
-                    aria-valuenow="25"
+                    aria-valuenow="65"
                     aria-valuemin="0"
                     aria-valuemax="100"
-                    style="height: 20px">
-                    <div class="progress-bar bg-info" style="width: 25%">
+                    style="height: 20px"
+                  >
+                    <div class="progress-bar bg-info" style="width: 65%">
                       <span>HTML</span>
-                      <span>25%</span>
+                      <span>65%</span>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="col-md-6 px-2">
                 <div class="progressBar">
-                  <strong>HTML</strong>
+                  <strong>C</strong>
                   <div
                     class="progress"
                     role="progressbar"
                     aria-label="Example 20px high"
-                    aria-valuenow="25"
+                    aria-valuenow="60"
                     aria-valuemin="0"
                     aria-valuemax="100"
-                    style="height: 20px">
-                    <div class="progress-bar bg-info" style="width: 25%">
-                      <span>HTML</span>
-                      <span>25%</span>
+                    style="height: 20px"
+                  >
+                    <div class="progress-bar bg-info" style="width: 60%">
+                      <span>C LANGUAGE</span>
+                      <span>60%</span>
                     </div>
                   </div>
                 </div>
                 <div class="progressBar">
-                  <strong>HTML</strong>
+                  <strong>C++</strong>
                   <div
                     class="progress"
                     role="progressbar"
                     aria-label="Example 20px high"
-                    aria-valuenow="25"
+                    aria-valuenow="50"
                     aria-valuemin="0"
                     aria-valuemax="100"
-                    style="height: 20px">
-                    <div class="progress-bar bg-info" style="width: 25%">
-                      <span>HTML</span>
-                      <span>25%</span>
+                    style="height: 20px"
+                  >
+                    <div class="progress-bar bg-info" style="width: 50%">
+                      <span>C++ LANGUAGE</span>
+                      <span>50%</span>
                     </div>
                   </div>
                 </div>
                 <div class="progressBar">
-                  <strong>HTML</strong>
+                  <strong>PYTHON</strong>
                   <div
                     class="progress"
                     role="progressbar"
                     aria-label="Example 20px high"
-                    aria-valuenow="25"
+                    aria-valuenow="90"
                     aria-valuemin="0"
                     aria-valuemax="100"
-                    style="height: 20px">
-                    <div class="progress-bar bg-info" style="width: 25%">
-                      <span>HTML</span>
-                      <span>25%</span>
+                    style="height: 20px"
+                  >
+                    <div class="progress-bar bg-info" style="width: 90%">
+                      <span>PYTHON LANGUAGE</span>
+                      <span>90%</span>
                     </div>
                   </div>
                 </div>
                 <div class="progressBar">
-                  <strong>HTML</strong>
+                  <strong>JAVA</strong>
                   <div
                     class="progress"
                     role="progressbar"
                     aria-label="Example 20px high"
-                    aria-valuenow="25"
+                    aria-valuenow="40"
                     aria-valuemin="0"
                     aria-valuemax="100"
-                    style="height: 20px">
-                    <div class="progress-bar bg-info" style="width: 25%">
-                      <span>HTML</span>
-                      <span>25%</span>
+                    style="height: 20px"
+                  >
+                    <div class="progress-bar bg-info" style="width: 40%">
+                      <span>JAVA LANGUAGE</span>
+                      <span>40%</span>
                     </div>
                   </div>
                 </div>
@@ -478,7 +489,8 @@
                   role="alert"
                   id="liveToast"
                   aria-live="assertive"
-                  aria-atomic="false">
+                  aria-atomic="false"
+                >
                   <div class="d-flex">
                     <div class="toast-body fw-bold">
                       This features is not Ready yet 🙂
@@ -487,14 +499,16 @@
                       type="button"
                       class="btn-close me-2 m-auto"
                       data-bs-dismiss="toast"
-                      aria-label="Close"></button>
+                      aria-label="Close"
+                    ></button>
                   </div>
                 </div>
                 <input
                   id="liveToastBtn"
                   type="button"
                   value="Send"
-                  class="btn btn-info text-light" />
+                  class="btn btn-info text-light"
+                />
               </form>
             </div>
           </div>
@@ -505,7 +519,8 @@
         <div class="container">
           <div class="row align-items-center">
             <div
-              class="col-md-6 d-block text-center d-md-flex align-items-center gap-2">
+              class="col-md-6 d-block text-center d-md-flex align-items-center gap-2"
+            >
               <img src="assets/images/an-mamun.png" alt="" />
               <div>
                 <strong>AN.Mamun &copy; </strong> <br />
