upgrate skills section

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     style="height: 20px"
                   >
                     <div class="progress-bar bg-info" style="width: 65%">
-                      <span>HTML</span>
+                      <span>WORDPRESS , SHOPIFAY</span>
                       <span>65%</span>
                     </div>
                   </div>
