add css animatin and typed js

--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-6 col-sm-12">
-              <h1>HAY! I'M AN MAMUN</h1>
+              <h1>
+                HAY!
+                <span class="typedJs"></span>
+              </h1>
               <p>Expert in Web Development and Programming</p>
               <div class="socail-icon">
                 <a href="https://web.facebook.com/anmamun0/"
@@ -556,6 +559,8 @@
     </main>
     <!-- Bootstrap JS  -->
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Typed.js / js for Typing on Text  -->
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <!-- Custom JS  -->
     <script src="assets/js/script.js"></script>
   </body>
