add aos animation

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       href="assets/images/an-mamun.png"
       type="image/x-icon"
     />
+    <!-- AOS Animation  -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- Bootstrap icons CDN -->
     <link
       rel="stylesheet"
@@ -72,12 +74,22 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-6 col-sm-12">
-              <h1>
+              <h1
+                data-aos="fade-right"
+                data-aos-offset="300"
+                data-aos-easing="ease-in-sine"
+              >
                 HAY!
                 <span class="typedJs"></span>
               </h1>
-              <p>Expert in Web Development and Programming</p>
-              <div class="socail-icon">
+              <p data-aos="zoom-in" data-aos-duration="2000">
+                Expert in Web Development and Programming
+              </p>
+              <div
+                data-aos="fade-up"
+                data-aos-duration="3000"
+                class="socail-icon"
+              >
                 <a href="https://web.facebook.com/anmamun0/"
                   ><i class="bi bi-facebook"></i
                 ></a>
@@ -98,7 +110,11 @@
                   ><i class="bi bi-link-45deg"></i
                 ></a>
               </div>
-              <div class="contact-btn mt-4">
+              <div
+                data-aos="fade-up"
+                data-aos-duration="2000"
+                class="contact-btn mt-4"
+              >
                 <a class="btn btn-primary" href="#">Contact</a>
                 <a
                   class="btn btn-outline-primary"
@@ -108,7 +124,12 @@
               </div>
             </div>
             <div class="col-md-6 col-sm-12 d-none d-md-block">
-              <img src="assets/images/My_full_body_pic.png" alt="AN.MAMUN" />
+              <img
+                data-aos="zoom-in"
+                data-aos-duration="3000"
+                src="assets/images/My_full_body_pic.png"
+                alt="AN.MAMUN"
+              />
             </div>
           </div>
         </div>
@@ -118,11 +139,15 @@
         <div class="container px-5 my-5">
           <div class="row align-items-center pt-5">
             <div class="col-md-6">
-              <div class="about-img">
+              <div
+                data-aos="fade-right"
+                data-aos-duration="1500"
+                class="about-img"
+              >
                 <img src="assets/images/MY_Animation_pic.gif" alt="AN.MAMUN" />
               </div>
             </div>
-            <div class="col-md-6">
+            <div data-aos="zoom-in" data-aos-duration="1500" class="col-md-6">
               <div class="Card">
                 <h1>Personal Details</h1>
                 <i class="bi bi-quote"></i>
@@ -147,10 +172,14 @@
           </div>
           <!-- Skills Info -->
           <div id="skills" class="skills-info pt-5 mt-5">
-            <h1>Skill Set</h1>
+            <h1 data-aos="fade-right" data-aos-duration="1000">Skill Set</h1>
             <div class="row align-items-center justify-content-between">
               <div class="col-md-6 px-2">
-                <div class="progressBar">
+                <div
+                  data-aos="fade-up-right"
+                  data-aos-duration="1000"
+                  class="progressBar"
+                >
                   <strong>WEB DESIGN</strong>
                   <div
                     class="progress"
@@ -167,7 +196,11 @@
                     </div>
                   </div>
                 </div>
-                <div class="progressBar">
+                <div
+                  data-aos="fade-up-right"
+                  data-aos-duration="1000"
+                  class="progressBar"
+                >
                   <strong>WEB DEVELOPMENT</strong>
                   <div
                     class="progress"
@@ -184,7 +217,11 @@
                     </div>
                   </div>
                 </div>
-                <div class="progressBar">
+                <div
+                  data-aos="fade-up-right"
+                  data-aos-duration="1000"
+                  class="progressBar"
+                >
                   <strong>WEB DESIGN</strong>
                   <div
                     class="progress"
@@ -201,7 +238,11 @@
                     </div>
                   </div>
                 </div>
-                <div class="progressBar">
+                <div
+                  data-aos="fade-up-right"
+                  data-aos-duration="1000"
+                  class="progressBar"
+                >
                   <strong>WEB DESIGN</strong>
                   <div
                     class="progress"
@@ -220,7 +261,11 @@
                 </div>
               </div>
               <div class="col-md-6 px-2">
-                <div class="progressBar">
+                <div
+                  data-aos="fade-up-right"
+                  data-aos-duration="1000"
+                  class="progressBar"
+                >
                   <strong>C</strong>
                   <div
                     class="progress"
@@ -237,7 +282,11 @@
                     </div>
                   </div>
                 </div>
-                <div class="progressBar">
+                <div
+                  data-aos="fade-up-right"
+                  data-aos-duration="1000"
+                  class="progressBar"
+                >
                   <strong>C++</strong>
                   <div
                     class="progress"
@@ -254,7 +303,11 @@
                     </div>
                   </div>
                 </div>
-                <div class="progressBar">
+                <div
+                  data-aos="fade-up-right"
+                  data-aos-duration="1000"
+                  class="progressBar"
+                >
                   <strong>PYTHON</strong>
                   <div
                     class="progress"
@@ -271,7 +324,11 @@
                     </div>
                   </div>
                 </div>
-                <div class="progressBar">
+                <div
+                  data-aos="fade-up-right"
+                  data-aos-duration="1000"
+                  class="progressBar"
+                >
                   <strong>JAVA</strong>
                   <div
                     class="progress"
@@ -298,7 +355,7 @@
         <div class="container py-5">
           <div class="row">
             <div class="col-md-3 col-sm-6 col-12">
-              <div class="card">
+              <div data-aos="fade-down" data-aos-duration="1000" class="card">
                 <div class="card-body">
                   <h5 class="card-title text-center text-info fs-1 pt-2">
                     70%
@@ -308,7 +365,7 @@
               </div>
             </div>
             <div class="col-md-3 col-sm-6 col-12">
-              <div class="card">
+              <div data-aos="fade-down" data-aos-duration="1000" class="card">
                 <div class="card-body">
                   <h5 class="card-title text-center text-info fs-1 pt-2">
                     25+
@@ -318,7 +375,7 @@
               </div>
             </div>
             <div class="col-md-3 col-sm-6 col-12">
-              <div class="card">
+              <div data-aos="fade-down" data-aos-duration="1000" class="card">
                 <div class="card-body">
                   <h5 class="card-title text-center text-info fs-1 pt-2">
                     90%
@@ -328,7 +385,7 @@
               </div>
             </div>
             <div class="col-md-3 col-sm-6 col-12">
-              <div class="card">
+              <div data-aos="fade-down" data-aos-duration="1000" class="card">
                 <div class="card-body">
                   <h5 class="card-title text-center text-info fs-1 pt-2">
                     75%
@@ -343,10 +400,10 @@
       <!-- Service Section  -->
       <section id="service" class="service-section">
         <div class="container py-5">
-          <h1>Awsome Service</h1>
+          <h1 data-aos="fade-right" data-aos-duration="1000">Awsome Service</h1>
           <div class="row">
             <div class="col-md-4 col-sm-6 col-12">
-              <div class="card">
+              <div data-aos="fade-down" data-aos-duration="1000" class="card">
                 <div class="card-body">
                   <i class="bi bi-display"></i>
                   <h5 class="card-title text-info">Problem</h5>
@@ -358,7 +415,7 @@
               </div>
             </div>
             <div class="col-md-4 col-sm-6 col-12">
-              <div class="card">
+              <div data-aos="fade-down" data-aos-duration="1000" class="card">
                 <div class="card-body">
                   <i class="bi bi-code-slash"></i>
                   <h5 class="card-title text-info">Sloved</h5>
@@ -370,7 +427,7 @@
               </div>
             </div>
             <div class="col-md-4 col-sm-6 col-12">
-              <div class="card">
+              <div data-aos="fade-down" data-aos-duration="1000" class="card">
                 <div class="card-body">
                   <i class="bi bi-braces-asterisk"></i>
                   <h5 class="card-title text-info">Problem</h5>
@@ -387,10 +444,14 @@
       <!-- Experience Section  -->
       <section id="qualifications" class="experience-section py-5">
         <div class="container">
-          <h1>Experience</h1>
+          <h1 data-aos="fade-right" data-aos-duration="1000">Experience</h1>
           <div class="row justify-content-between">
             <div class="col-md-6 row align-items-center">
-              <div class="ex-card">
+              <div
+                data-aos="fade-down"
+                data-aos-duration="1000"
+                class="ex-card"
+              >
                 <div class="col-4">
                   <i class="bi bi-pencil-fill"></i>
                 </div>
@@ -401,7 +462,11 @@
               </div>
             </div>
             <div class="col-md-6 row align-items-center">
-              <div class="ex-card">
+              <div
+                data-aos="fade-down"
+                data-aos-duration="1000"
+                class="ex-card"
+              >
                 <div class="col-4">
                   <i class="bi bi-pencil-fill"></i>
                 </div>
@@ -417,10 +482,20 @@
       <!-- Education Qualification  -->
       <section class="qualification-section py-5">
         <div class="container">
-          <h1 class="text-center">Education Qualification</h1>
+          <h1
+            data-aos="fade-right"
+            data-aos-duration="1000"
+            class="text-center"
+          >
+            Education Qualification
+          </h1>
           <div class="row justify-content-between">
             <div class="col-md-6 row align-items-center py-4">
-              <div class="ex-card">
+              <div
+                data-aos="fade-down"
+                data-aos-duration="1000"
+                class="ex-card"
+              >
                 <div class="col-4">
                   <i class="bi bi-houses-fill"></i>
                 </div>
@@ -431,7 +506,11 @@
               </div>
             </div>
             <div class="col-md-6 row align-items-center py-4">
-              <div class="ex-card">
+              <div
+                data-aos="fade-down"
+                data-aos-duration="1000"
+                class="ex-card"
+              >
                 <div class="col-4">
                   <i class="bi bi-houses-fill"></i>
                 </div>
@@ -442,7 +521,11 @@
               </div>
             </div>
             <div class="col-md-6 row align-items-center py-4">
-              <div class="ex-card">
+              <div
+                data-aos="fade-down"
+                data-aos-duration="1000"
+                class="ex-card"
+              >
                 <div class="col-4">
                   <i class="bi bi-calculator-fill"></i>
                 </div>
@@ -453,7 +536,11 @@
               </div>
             </div>
             <div class="col-md-6 row align-items-center py-4">
-              <div class="ex-card">
+              <div
+                data-aos="fade-down"
+                data-aos-duration="1000"
+                class="ex-card"
+              >
                 <div class="col-4">
                   <i class="bi bi-calculator-fill"></i>
                 </div>
@@ -470,13 +557,21 @@
       <section id="contact" class="contact-section">
         <div class="container">
           <div class="row align-items-center justify-content-around">
-            <div class="col-md-5 d-none d-md-block">
+            <div
+              data-aos-duration="1000"
+              data-aos="fade-right"
+              class="col-md-5 d-none d-md-block"
+            >
               <img src="assets/images/contact img.png" alt="Contact Image" />
             </div>
             <div class="col-md-5">
-              <h1>Contact Me</h1>
+              <h1 data-aos-duration="1000" data-aos="fade-down">Contact Me</h1>
               <form action="#">
-                <div class="d-flex gap-2 fs-5 fw-bold">
+                <div
+                  data-aos-duration="1000"
+                  data-aos="fade-down"
+                  class="d-flex gap-2 fs-5 fw-bold"
+                >
                   <span class="d-inline">Contact Email: </span>
                   <a
                     class="nav-link text-danger"
@@ -484,9 +579,26 @@
                     >almamun20044@gmail.com</a
                   >
                 </div>
-                <input type="text" placeholder="Name" required />
-                <input type="email" placeholder="Email" required />
-                <textarea placeholder="Message" required></textarea>
+                <input
+                  data-aos-duration="1000"
+                  data-aos="fade-down"
+                  type="text"
+                  placeholder="Name"
+                  required
+                />
+                <input
+                  data-aos-duration="1000"
+                  data-aos="fade-down"
+                  type="email"
+                  placeholder="Email"
+                  required
+                />
+                <textarea
+                  data-aos-duration="1000"
+                  data-aos="fade-down"
+                  placeholder="Message"
+                  required
+                ></textarea>
                 <div
                   class="toast align-items-center"
                   role="alert"
@@ -507,6 +619,8 @@
                   </div>
                 </div>
                 <input
+                  data-aos-duration="1000"
+                  data-aos="fade-down"
                   id="liveToastBtn"
                   type="button"
                   value="Send"
@@ -561,6 +675,8 @@
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- Typed.js / js for Typing on Text  -->
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <!-- AOS Animation  -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Custom JS  -->
     <script src="assets/js/script.js"></script>
   </body>
