--- a/index.html
+++ b/index.html
@@ -115,10 +115,6 @@
                 <a href="https://twitter.com/anmamun0"
                   ><i class="bi bi-twitter"></i
                 ></a>
-                <a
-                  href="https://www.youtube.com/channel/UCmunP9J4cGIJMhF2kXYSaqQ"
-                  ><i class="bi bi-youtube"></i
-                ></a>
                 <a href="https://www.linkedin.com/in/anmamun0/"
                   ><i class="bi bi-linkedin"></i
                 ></a>
@@ -128,6 +124,9 @@
                 <a href="https://codeforces.com/profile/anmamun0"
                   ><i class="bi bi-link-45deg"></i
                 ></a>
+                <a href="https://leetcode.com/anmamun0/">
+                  <img src="assets/images/leetcode.svg" style="width:20px;height:20px;margin-top: 7px;">
+                </a>
               </div>
               <div
                 data-aos="fade-up"
