--- a/blog.html
+++ b/blog.html
@@ -145,7 +145,6 @@
                 </div>
             </div><!-- end of blog wrapper -->
 
-
             <!-- blog-wrapper -->
             <div class="blog-card">
               <div class="blog-card-header">
@@ -154,30 +153,154 @@
               </div>
               <div class="blog-card-body">
                   <h5 class="blog-card-title">The Path to Success in Software Engineering: A Journey of Many</h6>
-
                       <p class="blog-card-caption">
                           <a href="#">By: Admin</a>
                           <a href="#"><i class="ti-heart text-danger"></i> 456</a>
                           <a href="#"><i class="ti-comment"></i> 264</a>
                       </p>
-
                       <p>Embarking on a career in software engineering opens doors to a world of innovation and problem-solving. 
                         Success in this field is diverse, with individuals carving unique paths. Let's explore the various 
                         routes and factors contributing to the success of people in software engineering.</p>
                         <p><b>It's about continuous learning, problem-solving, effective collaboration, adaptability, 
                           and building a portfolio that reflects one's capabilities.</b></p>
-
                       <a href="#" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
               </div>
           </div><!-- end of blog wrapper -->
-
-
         </div><!-- end of container -->
     </section><!-- end of blog section -->
 
 
 
-    <!-- testimonial section -->
+
+
+
+<!------------- Review Of my Blog ----------------------->
+<form class="rating">
+  <p class="section-subtitle">What Review do you want to give me?</p>
+  <div class="rating__stars">
+    <input id="rating-1" class="rating__input rating__input-1" type="radio" name="rating" value="1" >
+    <input id="rating-2" class="rating__input rating__input-2" type="radio" name="rating" value="2" >
+    <input id="rating-3" class="rating__input rating__input-3" type="radio" name="rating" value="3" checked>
+    <input id="rating-4" class="rating__input rating__input-4" type="radio" name="rating" value="4">
+    <input id="rating-5" class="rating__input rating__input-5" type="radio" name="rating" value="5">
+    <label class="rating__label" for="rating-1">
+      <svg class="rating__star" width="32" height="32" viewBox="0 0 32 32" aria-hidden="true">
+        <g transform="translate(16,16)">
+          <circle class="rating__star-ring" fill="none" stroke="#000" stroke-width="16" r="8" transform="scale(0)" />
+        </g>
+        <g stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <g transform="translate(16,16) rotate(180)">
+            <polygon class="rating__star-stroke" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="none" />
+            <polygon class="rating__star-fill" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="#000" />
+          </g>
+          <g transform="translate(16,16)" stroke-dasharray="12 12" stroke-dashoffset="12">
+            <polyline class="rating__star-line" transform="rotate(0)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(72)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(144)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(216)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(288)" points="0 4,0 16" />
+          </g>
+        </g>
+      </svg>
+      <span class="rating__sr">1 star—Terrible</span>
+    </label>
+    <label class="rating__label" for="rating-2">
+      <svg class="rating__star" width="32" height="32" viewBox="0 0 32 32" aria-hidden="true">
+        <g transform="translate(16,16)">
+          <circle class="rating__star-ring" fill="none" stroke="#000" stroke-width="16" r="8" transform="scale(0)" />
+        </g>
+        <g stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <g transform="translate(16,16) rotate(180)">
+            <polygon class="rating__star-stroke" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="none" />
+            <polygon class="rating__star-fill" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="#000" />
+          </g>
+          <g transform="translate(16,16)" stroke-dasharray="12 12" stroke-dashoffset="12">
+            <polyline class="rating__star-line" transform="rotate(0)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(72)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(144)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(216)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(288)" points="0 4,0 16" />
+          </g>
+        </g>
+      </svg>
+      <span class="rating__sr">2 stars—Bad</span>
+    </label>
+    <label class="rating__label" for="rating-3">
+      <svg class="rating__star" width="32" height="32" viewBox="0 0 32 32" aria-hidden="true">
+        <g transform="translate(16,16)">
+          <circle class="rating__star-ring" fill="none" stroke="#000" stroke-width="16" r="8" transform="scale(0)" />
+        </g>
+        <g stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <g transform="translate(16,16) rotate(180)">
+            <polygon class="rating__star-stroke" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="none" />
+            <polygon class="rating__star-fill" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="#000" />
+          </g>
+          <g transform="translate(16,16)" stroke-dasharray="12 12" stroke-dashoffset="12">
+            <polyline class="rating__star-line" transform="rotate(0)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(72)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(144)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(216)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(288)" points="0 4,0 16" />
+          </g>
+        </g>
+      </svg>
+      <span class="rating__sr">3 stars—OK</span>
+    </label>
+    <label class="rating__label" for="rating-4">
+      <svg class="rating__star" width="32" height="32" viewBox="0 0 32 32" aria-hidden="true">
+        <g transform="translate(16,16)">
+          <circle class="rating__star-ring" fill="none" stroke="#000" stroke-width="16" r="8" transform="scale(0)" />
+        </g>
+        <g stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <g transform="translate(16,16) rotate(180)">
+            <polygon class="rating__star-stroke" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="none" />
+            <polygon class="rating__star-fill" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="#000" />
+          </g>
+          <g transform="translate(16,16)" stroke-dasharray="12 12" stroke-dashoffset="12">
+            <polyline class="rating__star-line" transform="rotate(0)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(72)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(144)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(216)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(288)" points="0 4,0 16" />
+          </g>
+        </g>
+      </svg>
+      <span class="rating__sr">4 stars—Good</span>
+    </label>
+    <label class="rating__label" for="rating-5">
+      <svg class="rating__star" width="32" height="32" viewBox="0 0 32 32" aria-hidden="true">
+        <g transform="translate(16,16)">
+          <circle class="rating__star-ring" fill="none" stroke="#000" stroke-width="16" r="8" transform="scale(0)" />
+        </g>
+        <g stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <g transform="translate(16,16) rotate(180)">
+            <polygon class="rating__star-stroke" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="none" />
+            <polygon class="rating__star-fill" points="0,15 4.41,6.07 14.27,4.64 7.13,-2.32 8.82,-12.14 0,-7.5 -8.82,-12.14 -7.13,-2.32 -14.27,4.64 -4.41,6.07" fill="#000" />
+          </g>
+          <g transform="translate(16,16)" stroke-dasharray="12 12" stroke-dashoffset="12">
+            <polyline class="rating__star-line" transform="rotate(0)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(72)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(144)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(216)" points="0 4,0 16" />
+            <polyline class="rating__star-line" transform="rotate(288)" points="0 4,0 16" />
+          </g>
+        </g>
+      </svg>
+      <span class="rating__sr">5 stars—Excellent</span>
+    </label>
+    <p class="rating__display" data-rating="1" hidden>Normal</p>
+    <p class="rating__display" data-rating="2" hidden>Not Bad</p>
+    <p class="rating__display" data-rating="3" hidden>Justified</p>
+    <p class="rating__display" data-rating="4" hidden>Good</p>
+    <p class="rating__display" data-rating="5" hidden>Excellent</p>
+  </div>
+</form>
+<!------------- Review Of my Blog End ----------------------->
+
+
+
+
+<!---------------------- testimonial section ---------------------->
     <section class="section" id="testmonial">
       <div class="container text-center">
           <p class="section-subtitle">What Think Client About Me ?</p>
@@ -218,8 +341,19 @@
               </div>
           </div>
       </div> <!-- end of container -->
-  </section> <!-- end of testimonial section -->
+  </section> 
+  <!---------------------- testimonial section END ---------------------->
 
+
+
+       <!-- Time Section Calender --- -->
+       <div class="time-section">
+        <h6 id="time"></h6>
+        <p id="date"></p>
+      </div>
+      <!-- Time Section Calender END--- -->
+
+      
       <!-- =============== Footer Section ================  -->
       <footer class="footer-section">
         <div class="container">
