--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <span class="typedJs"></span>
               </h1>
               <p data-aos="fade-right" data-aos-duration="2000">
-                Expert in Softwer Development and Programming.
+                Expert in Software Engineer and Competitive Programmer |
               </p>
               <div
                 data-aos="fade-up"
