--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <i class="bi bi-list"></i>
         </button>
         <div class="collapse navbar-collapse text-center" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
+          <ul class="navbar-nav ms-auto" >
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#home"
                 >Home</a
@@ -69,6 +69,13 @@
             <li class="nav-item">
               <a class="nav-link" href="blog.html#blog">Blog</a>
             </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="learn.html#learn">Learn</a>
+            </li>
+
+
+
             <li class="nav-item">
               <a class="nav-link" href="#projects">Project</a>
             </li>
@@ -102,7 +109,7 @@
                 <span class="typedJs"></span>
               </h1>
               <p data-aos="fade-right" data-aos-duration="2000">
-                Expert in Software Engineer and <br>Competitive Programmer|
+                </b>Expert in Software Engineer and <br> Competitive Programmer|
               </p>
               <div
                 data-aos="fade-up"
@@ -385,9 +392,7 @@
             <div class="col-md-3 col-sm-6 col-12">
               <div data-aos="fade-down" data-aos-duration="1000" class="card">
                 <div class="card-body">
-                  <h5 id="count1" class="card-title text-center text-info fs-1 pt-2">
-                    70%
-                  </h5>
+                  <h5 id="count1" class="card-title text-center text-info fs-1 pt-2"> 70% </h5>
                   <p class="card-text text-center">Leet Code</p>
                 </div>
               </div>
@@ -395,9 +400,7 @@
             <div class="col-md-3 col-sm-6 col-12">
               <div data-aos="fade-down" data-aos-duration="1000" class="card">
                 <div class="card-body">
-                  <h5 id="count2" class="card-title text-center text-info fs-1 pt-2">
-                    90%
-                  </h5>
+                  <h2 id="count2" class="card-title text-center text-info fs-1 pt-2" data-toggle="counter-up"> 90% </h5>
                   <p class="card-text text-center">CodeForce</p>
                 </div>
               </div>
@@ -405,9 +408,7 @@
             <div class="col-md-3 col-sm-6 col-12">
               <div data-aos="fade-down" data-aos-duration="1000" class="card">
                 <div class="card-body">
-                  <h5 id="count3" class="card-title text-center text-info fs-1 pt-2">
-                    70%
-                  </h5>
+                  <h5 id="count3" class="card-title text-center text-info fs-1 pt-2"> 70% </h5>
                   <p class="card-text text-center">Code Shef</p>
                 </div>
               </div>
@@ -811,6 +812,7 @@
     <script src="https://cdn.jsdelivr.net/npm/countup.js@2.0.7/dist/countUp.umd.js"></script>
 
     <script src="countUp.umd.js"></script>
+
    
   
   </body>
