--- a/index.html
+++ b/index.html
@@ -392,15 +392,15 @@
             <div class="col-md-3 col-sm-6 col-12">
               <div data-aos="fade-down" data-aos-duration="1000" class="card">
                 <div class="card-body">
-                  <h5 id="count1" class="card-title text-center text-info fs-1 pt-2"> 70% </h5>
-                  <p class="card-text text-center">Leet Code</p>
+                  <h5 id="count1" class="card-title text-center text-info fs-1 pt-2"> 300+ </h5>
+                  <p class="card-text text-center">LeetCode</p>
                 </div>
               </div>
             </div>
             <div class="col-md-3 col-sm-6 col-12">
               <div data-aos="fade-down" data-aos-duration="1000" class="card">
                 <div class="card-body">
-                  <h2 id="count2" class="card-title text-center text-info fs-1 pt-2" data-toggle="counter-up"> 90% </h5>
+                  <h2 id="count2" class="card-title text-center text-info fs-1 pt-2" data-toggle="counter-up"> 500+ </h5>
                   <p class="card-text text-center">CodeForce</p>
                 </div>
               </div>
@@ -408,8 +408,8 @@
             <div class="col-md-3 col-sm-6 col-12">
               <div data-aos="fade-down" data-aos-duration="1000" class="card">
                 <div class="card-body">
-                  <h5 id="count3" class="card-title text-center text-info fs-1 pt-2"> 70% </h5>
-                  <p class="card-text text-center">Code Shef</p>
+                  <h5 id="count3" class="card-title text-center text-info fs-1 pt-2"> 400+ </h5>
+                  <p class="card-text text-center">CodeShef</p>
                 </div>
               </div>
             </div>
@@ -417,7 +417,7 @@
               <div data-aos="fade-down" data-aos-duration="1000" class="card">
                 <div class="card-body">
                   <h5 id="count4" class="card-title text-center text-info fs-1 pt-2">
-                    90%
+                    200+
                   </h5>
                   <p class="card-text text-center">CP</p>
                 </div>
